oncokb/oncokb-msk/dev/oncokb_core_beta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  creationTimestamp: null
  generation: 1
  labels:
    run: oncokb-core-beta
  name: oncokb-core-beta
spec:
  replicas: 4
  selector:
    matchLabels:
      run: oncokb-core-beta
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: oncokb-core-beta
    spec:
      containers:
        - env:
          image: oncokb/oncokb:3.10.0
          command: ["java"]
          args: [
            # from https://developers.redhat.com/blog/2017/04/04/openjdk-and-containers/
            "-Xms250m",
            "-XX:+UseSerialGC",
            # aggressive garbage collection
            "-XX:MinHeapFreeRatio=20",
            "-XX:MaxHeapFreeRatio=40",
            "-XX:GCTimeRatio=4",
            "-XX:AdaptiveSizePolicyWeight=90",
            "-XX:+UnlockExperimentalVMOptions",
            "-XX:+UseCGroupMemoryLimitForHeap",
            # use maxRAMFraction > 1 https://github.com/akka/akka/issues/23499
            "-XX:MaxRAMFraction=2",
            "-XX:+PrintFlagsFinal",
            "-XshowSettings:vm",
            # need to set MaxRAM, somehow the MaxRAMFraction is not picked up
            # from the limits
            "-XX:MaxRAM=1024m",
            "-Dapp.name=$(APP_NAME)",
            "-Djdbc.driverClassName=com.mysql.jdbc.Driver",
            "-Djdbc.url=$(DB_URL)/oncokb_core_beta?useUnicode=yes&characterEncoding=UTF-8&useSSL=false",
            "-Djdbc.username=$(DB_USERNAME)",
            "-Djdbc.password=$(DB_PASSWORD)",
            "-Dgenomenexus.api=https://www.genomenexus.org/",
            "-Doncokb_data.access_token=$(ONCOKBDEV_PRIVATE_ACCESS_TOKEN)",
            "-Doncokb_transcript.token=$(ONCOKB_TRANSCRIPT_TOKEN)",
            "-Dredis.enable=true",
            "-Dredis.type=$(REDIS_TYPE)",
            "-Dredis.address=$(REDIS_ADDRESS)",
            "-Dredis.password=$(REDIS_PASSWROD)",
            "-Dredis.masterName=$(REDIS_MASTERNAME)",
            "-Dredis.expiration=$(REDIS_EXPIRATION)",
            "-Dshow_sitemaps=false",
            "-Dsentry.stacktrace.app.packages=org.mskcc.cbio.oncokb",
            "-Dsentry.sample.rate=1",
            "-jar",
            "/webapp-runner.jar",
            "--enable-compression",
            "--port",
            "8888",
            "/app.war"
          ]
          imagePullPolicy: Always
          # use actionable variants endpoint to cache everything
          readinessProbe:
            httpGet:
              path: /api/v1/utils/allActionableVariants
              port: 8888
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /api/v1/utils/allActionableVariants
              port: 8888
            # wait for the pod is ready
            initialDelaySeconds: 1800
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 20
          name: oncokb-core-beta
          ports:
            - containerPort: 8888
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 4
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: oncokb-core-beta
  name: oncokb-core-beta
spec:
  ports:
    - port: 8888
  selector:
    run: oncokb-core-beta
  type: ClusterIP
