oncokb/oncokb-msk/dev/oncokb_curation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  labels:
    run: oncokb-curation
  name: oncokb-curation
spec:
  replicas: 1
  selector:
    matchLabels:
      run: oncokb-curation
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: oncokb-curation
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: prod,api-docs,no-liquibase
            - name: APPLICATION_FIREBASE_ENABLED
              value: "true"
            - name: APPLICATION_REDIS_ENABLED
              value: "true"
            - name: APPLICATION_REDIS_TYPE
              value: "$(REDIS_TYPE)"
            - name: APPLICATION_REDIS_ADDRESS
              value: "$(REDIS_ADDRESS)"
            - name: APPLICATION_REDIS_PASSWORD
              value: "$(REDIS_PASSWORD)"
            - name: SPRING_DATASOURCE_URL
              value: "$(DB_URL)/oncokb_curation"
            - name: SPRING_DATASOURCE_USERNAME
              value: "$(DB_USERNAME)"
            - name: SPRING_DATASOURCE_PASSWORD
              value: "$(DB_PASSWORD)"
            # These are the redis properties for setting up spring sessions
            - name: SPRING_REDIS_HOST
              value: "oncokb-curation-redis-master"
            - name: SPRING_REDIS_PORT
              value: "6379"
            - name: SPRING_REDIS_PASSWORD
              value: "$(REDIS_PASSWORD)"
          image: oncokb/oncokb-curation:0.10.6-alpha.0
          imagePullPolicy: Always
          # use actionable variants endpoint to cache everything
          readinessProbe:
            httpGet:
              path: /
              port: 9090
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 9090
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 3000
          name: oncokb-curation
          ports:
            - name: http
              containerPort: 9090
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            # The subPath is needed so that mounting the secret as a single file doesn't override
            # the contents of the existing directory.
            - mountPath: /app/resources/oncokb-firebase-credentials.json
              subPath: oncokb-firebase-credentials.json
              name: firebase-credentials
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: firebase-credentials
          secret:
            secretName: oncokb-firebase-dev-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: oncokb-curation
spec:
  ports:
    - port: 9090
      name: http
      targetPort: 9090
  selector:
    run: oncokb-curation
  type: ClusterIP
