oncokb/oncokb-msk/dev/oncokb_public_germline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oncokb-public-germline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oncokb-public-germline
      version: 'v1'
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: oncokb-public-germline
        version: 'v1'
    spec:
      containers:
        - name: oncokb-public
          image: oncokb/oncokb-public:4.0.0-germline.1
          readinessProbe:
            httpGet:
              path: /
              port: 9095
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 9095
            initialDelaySeconds: 90
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 5
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 2Gi
              cpu: 750m
          ports:
            - name: http
              containerPort: 9095
          volumeMounts:
            # The subPath is needed so that mounting the secret as a single file doesn't override
            # the contents of the existing directory.
            - mountPath: /app/resources/config/recaptcha/oncokb-recaptcha-credentials.json
              subPath: oncokb-recaptcha-credentials.json
              name: recaptcha-credentials
      volumes:
      - name: recaptcha-credentials
        secret:
          secretName: oncokb-recaptcha-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: oncokb-public-germline
  labels:
    app: oncokb-public-germline
spec:
  selector:
    app: oncokb-public-germline
  type: ClusterIP
  ports:
    - port: 9095
