oncokb/oncokb-msk/dev/oncotree.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oncotree
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oncotree
      version: 'v1'
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: oncotree
        version: 'v1'
    spec:
      containers:
        - name: oncotree
          image: oncokb/oncotree:latest
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 2Gi
              cpu: 750m
          ports:
            - name: http
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: oncotree
  labels:
    app: oncotree
spec:
  selector:
    app: oncotree
  type: ClusterIP
  ports:
    - port: 80
