oncokb/oncokb-msk/dev/ingress_oncokb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oncokb-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - www.oncokb.dev.aws.mskcc.org
      - grafana.oncokb.dev.aws.mskcc.org
      - airflow.oncokb.dev.aws.mskcc.org
      - core.oncokb.dev.aws.mskcc.org
      - germline.oncokb.dev.aws.mskcc.org
  rules:
    - host: "www.oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-public
                port:
                  number: 9095
    - host: "core.oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-core
                port:
                  number: 8888
    - host: "grafana.oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-grafana
                port:
                  number: 80
    - host: "airflow.oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: airflow
                port:
                  number: 8080
    - host: "germline.oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-core-germline
                port:
                  number: 8888
  ingressClassName: nginx
